fixed issue of images not showing

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .home-section{
-    background-image: url(/assests/background.jpg);
+    background-image: url(../assests/background.jpg);
     padding: 150px;
 
 }
